# auto-coder-trainer

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  PROJECT_ANALYSIS.md  README.md  TinyZero_实验方案.md  pyproject.toml
.claude/: settings.json
ARIS/: .gitattributes  .gitignore  CONTRIBUTING_CN.md  README.md  README_CN.md
ARIS/docs/: CURSOR_ADAPTATION.md  LLM_API_MIX_MATCH_GUIDE.md  MINIMAX_MCP_GUIDE.md  MODELSCOPE_GUIDE.md
aris/: CONTRIBUTING.md  README.md  xhs_post.md
aris/docs/: ALI_CODING_PLAN_GUIDE.md  MiniMax-GLM-Configuration.md  NARRATIVE_REPORT_EXAMPLE.md  OPENCLAW_ADAPTATION.md  SKILLS_REFERENCE.md
benchmarks/: result_card.py  run_benchmark.py  suite.py
benchmarks/recipes/: quick_sft.recipe.json
cli/: __init__.py  collect.py  compose.py  main.py  pipeline.py  report.py  rerun.py  status.py  sync.py  train.py
data/: results.db-shm
evaluators/: __init__.py  base.py  pass_at_k.py  report.py  swe_bench.py
judge/: __init__.py  ablation.py  attribution.py  baseline.py  dedup.py  judge.py  research_feedback.py
prompt_cache/: __init__.py  builder.py  compaction.py  monitor.py  rules.py
recipes/: COMPILER.md  __init__.py  compiler.py
recipes/examples/: baseline-sft.recipe.json  smoke-tinyzero.recipe.json  swe-lego-qwen3.5-9b.recipe.json  swe-lego-verifier-qwen3.5-9b.recipe.json  trajectory-rl.recipe.json
recipes/experiments/: README.md  exp01-grpo-gsm8k.recipe.json  exp02-fp8-quantization.recipe.json  exp03-data-scaling.recipe.json  exp04-cross-task-transfer-smoke-phase1.recipe.json  exp04-cross-task-transfer-smoke-phase2.recipe.json  exp04-cross-task-transfer.recipe.json  exp05-reward-design.recipe.json  exp06-model-scale.recipe.json  exp07-kl-sensitivity.recipe.json  exp08-rollout-n.recipe.json  exp09-temperature.recipe.json  exp10-lora-vs-full.recipe.json  exp11-comprehensive-scaling.recipe.json  exp12-pass-at-k.recipe.json  exp13-one-shot-rlvr.recipe.json  exp14-distill-vs-rl.recipe.json  exp15-self-reflection.recipe.json  exp16-multimodal.recipe.json  exp17-multiturn-rl.recipe.json  exp18-capability-retention.recipe.json  exp19-tinyzero-replication-smoke.recipe.json  exp19-tinyzero-replication.recipe.json  exp20-multiturn-thinking.recipe.json  exp21-reward-shaping-thinking.recipe.json
recipes/registry/: README.md  method_atoms.json
recipes/schema/: recipe.schema.json
results/: __init__.py  db.py  report_generator.py  schema.sql
scripts/: make_countdown_data.py  make_gsm8k_data.py  make_toy_data.py  reward_countdown.py  reward_gsm8k_partial.py  reward_gsm8k_process.py  reward_thinking.py  run_ablation_sweep.py  run_two_phase_transfer.py
skills/collect/: SKILL.md
skills/compose/: SKILL.md
skills/report/: SKILL.md
skills/train/: SKILL.md
tests/: test_cli_pipeline.py  test_distill.py  test_evaluator_runner.py  test_fixes.py  test_model_registry.py  test_pipeline_and_blog_report.py  test_slurm_submitter.py  test_slurm_tracking.py  test_swe_lego_data.py  test_swe_lego_launcher.py  test_swe_lego_pipeline_scripts.py  test_swe_lego_results_bridge.py  test_tinyzero_launcher.py  test_tinyzero_results_bridge.py
trainers/: __init__.py  base.py  registry.py
trainers/distill/: trainer.py
trainers/rl/: __init__.py  data.py  reward.py  trainer.py
trainers/sft/: __init__.py  data.py  trainer.py
(+72 files in other folders)
