[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-coder-trainer"
version = "0.1.0"
description = "Research Operating System for Coding Agent Training — from papers to trained models in a closed loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sft = [
    "trl>=0.12.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
]
distill = [
    "trl>=0.12.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
]
rl = [
    "verl>=0.3.0",
    "trl>=0.14.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
]
tinyzero = [
    "verl>=0.3.0",
]
eval = [
    "swebench>=2.0.0",
]
# SWE-Lego backend: LLaMA-Factory is installed separately (pip install -e)
# from the cloned SWE-Lego repo. This extra only covers the Python runtime
# dependencies needed by the launcher, inference, and verifier scripts.
swe-lego = [
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "deepspeed>=0.14.0",
    "peft>=0.13.0",
]
# Qwen3.5 models require newer versions of key inference/training deps.
# Install with: pip install -e ".[swe-lego-qwen3.5]"
swe-lego-qwen35 = [
    "transformers>=4.52.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "deepspeed>=0.14.0",
    "peft>=0.13.0",
    "vllm>=0.17.0",
]
all = [
    "trl>=0.14.0",
    "transformers>=4.52.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
    "verl>=0.3.0",
    "swebench>=2.0.0",
    "deepspeed>=0.14.0",
    "vllm>=0.17.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7.0",
]

[project.scripts]
act = "cli.main:main"

[tool.setuptools.packages.find]
include = ["trainers*", "evaluators*", "judge*", "results*", "cli*", "recipes*", "prompt_cache*", "skills*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
